--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   app:
-    container_name: docker-node-mongo
+    container_name: thingortwo-backend
     restart: always
     build: .
     ports:
-      - '80:3000'
+      - '80:3030'
     external_links:
       - mongo
   mongo:
